--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,12 @@
 /local.properties
 /.idea/caches
 /.idea/vcs.xml
-/.idea/misc.xml
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+.idea/misc.xml
 .DS_Store
 /build
 /captures
