--- a/favorite/src/main/AndroidManifest.xml
+++ b/favorite/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <dist:module
         dist:instant="false"
-        dist:title="@string/titleFavorite">
+        dist:title="@string/favorite">
         <dist:delivery>
             <dist:install-time />
         </dist:delivery>
