--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,6 @@ orbs:
 jobs:
   build:
     executor: android/android
-    before_script:
-      - touch local.properties
     steps:
       - checkout
       - restore_cache:
@@ -15,6 +13,9 @@ jobs:
       - run:
           name: Chmod permissions
           command: sudo chmod +x ./gradlew
+      - run:
+          name: Create local.properties
+          command: touch local.properties
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
