--- a/core/build.gradle
+++ b/core/build.gradle
@@ -67,13 +67,13 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10'
 
     // SQLCipher
-    implementation "net.zetetic:android-database-sqlcipher:4.4.0"
+    implementation 'net.zetetic:android-database-sqlcipher:4.5.2'
     implementation "androidx.sqlite:sqlite-ktx:2.2.0"
 
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.13.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.1'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 }
